# imap-filter-rs

./: .gitignore  Cargo.toml  README.md  imap-filter-test.yml  imap-filter.yml  prompt
docs/: GMAIL.md  prompt-message-filter  prompt-state  prompt-state-v2
src/: address_filter.rs  imap_filter.rs  leatherman.rs  main.rs  message.rs  message_filter.rs  state.rs  subject_filter.rs  uid_tracker.rs  utils.rs
