[package]
name = "imap-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
addr = "0.15.6"
clap = { version = "4.5.29", features = ["derive", "env"] }
env_logger = "0.11.6"
eyre = "0.6.12"
imap = "2.4.1"
imap-proto = "0.16.5"
log = "0.4.25"
native-tls = "0.2.13"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
