[package]
name = "imap-filter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
addr = "0.15.6"
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive", "env"] }
env_logger = "0.11.6"
eyre = "0.6.12"
globset = "0.4.15"
imap = "2.4.1"
imap-proto = "0.16.5"
log = "0.4.25"
mailparse = "0.16.0"
native-tls = "0.2.13"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
